--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.3.3",
+    "lottie-web": "^5.9.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
+    "react-lottie-player": "^1.4.3",
     "react-pdf": "^5.7.2"
   },
   "devDependencies": {
